external-crates/move/crates/move-compiler/tests/move_check/parser/let_binding_missing_paren.move
module 0x42::M {
    fun f() {
        let (x1, x2 = (1, 2); // Test a missing right parenthesis
    }
}
